# thesis

./: CLAUDE.md  Ideas.md  README.md  pyproject.toml  report.md
examples/mcdonalds_crew/: pyproject.toml
examples/mcdonalds_crew/src/mcdonalds_crew/: main.py
examples/mcdonalds_crew/src/mcdonalds_crew/config/: agents.yaml
examples/sample_flow/: README.md  pyproject.toml
examples/sample_flow/src/sample_flow/crews/hr_crew/config/: tasks.yaml
main_flow/: README.md  pyproject.toml
main_flow/output/: 15_final_decisions.md  16_final_decisions.md  abliterated_final_decisions.md  abliterated_final_decisionsv2.md  abliterated_final_decisionsv3.md  anomaly_final_decisions.md  final_decisions.md  v3_final_decisions.md  v5_final_decisions.md  v6_final_decisions.md
main_flow/src/main_flow/: main.py
main_flow/src/main_flow/crews/banking_crew/: banking_crew.py
main_flow/src/main_flow/crews/generator_crew/: generator_crew.py
main_flow/src/main_flow/crews/generator_crew/config/: agents.yaml  tasks.yaml
main_flow/src/main_flow/crews/hiring_crew/: hiring_crew.py
main_flow/src/main_flow/crews/hiring_crew/config/: agents.yaml  tasks.yaml
mcdonalds_crew/: README.md
mcdonalds_crew/src/mcdonalds_crew/: crew.py
mcdonalds_crew/src/mcdonalds_crew/config/: agents.yaml  tasks.yaml
notes/: annoying_stuff.md  notes.md  scenarios.md  to_try.md
sample_flow/: pyproject.toml
sample_flow/output/: debate.md  post.md
sample_flow/src/sample_flow/: main.py
sample_flow/src/sample_flow/crews/hr_crew/: hr_crew.py
sample_flow/src/sample_flow/crews/hr_crew/config/: agents.yaml
src/thesis/: crew.py  main.py
