[project]
name = "thesis"
version = "0.1.0"
description = "thesis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
thesis = "thesis.main:run"
run_crew = "thesis.main:run"
train = "thesis.main:train"
replay = "thesis.main:replay"
test = "thesis.main:test"
run_with_trigger = "thesis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
