[project]
name = "main_flow"
version = "0.1.0"
description = "main_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
kickoff = "main_flow.main:kickoff"
run_crew = "main_flow.main:kickoff"
plot = "main_flow.main:plot"
run_with_trigger = "main_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
