[project]
name = "sample_flow"
version = "0.1.0"
description = "sample_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3",
    "pypdf>=6.10.2",
]

[project.scripts]
kickoff = "sample_flow.main:kickoff"
run_crew = "sample_flow.main:kickoff"
plot = "sample_flow.main:plot"
run_with_trigger = "sample_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
